# HouseOfHandwoven

./: .env.production  .gitignore  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOY_INSTRUCTIONS.md  README.md  SECURE_DEPLOYMENT.md  SETUP_GUIDE.md  index.html  package-lock.json  package.json  start.sh  vercel.json  vite.config.js
backend/: createAdmins.js  package-lock.json  package.json  render.yaml  seed.js  server.js  vercel.json
backend/middleware/: auth.js
backend/models/: Admin.js  Event.js  Product.js
backend/routes/: admin.js  events.js  products.js
house_of_handwovenjwellery_collectiion 8.29.36 PM/: README.md  pyproject.toml
house_of_handwovenjwellery_collectiion 8.29.36 PM/src/house_of_handwovenjwellery_collectiion/: crew.py  main.py
house_of_handwovenjwellery_collectiion 8.29.36 PM/src/house_of_handwovenjwellery_collectiion/config/: agents.yaml  tasks.yaml
house_of_handwovenjwellery_collectiion 8.29.36 PM/src/house_of_handwovenjwellery_collectiion/project_output/: App.jsx  architecture_plan.md  plan.md  qa_report.md  schema.js
src/: App.jsx  index.css
src/components/: BannerSlideshow.jsx  EventsSection.jsx  Footer.jsx  Header.jsx  ProductCard.jsx
src/components/admin/: ProtectedRoute.jsx
src/context/: AdminContext.jsx  CartContext.jsx
src/data/: products.js
src/pages/: Cart.jsx  Contact.jsx  Home.jsx  Products.jsx
src/pages/admin/: AdminDashboard.jsx  AdminEvents.jsx  AdminLogin.jsx  ProductForm.jsx  ProductManagement.jsx
src/services/: api.js
src/utils/: messaging.js
